Fully functional filter by label name